tests/invalid/test_100.wyal
type Entry is ({int key, int value} r)

define Map(Entry[] entries) is:
    forall(int i1, int i2):
        if:
            entries[i1].key == entries[i2].key
        then:
            i1 == i2

assert:
    Map([{key: 2, value: 3}, {key: 2, value: 4}])
